Adding spotless and pre-commit