@@ -183,6 +183,9 @@
             <importOrder/>
             <removeUnusedImports/>
           </java>
+          <upToDateChecking>
+            <enabled>true</enabled>
+          </upToDateChecking>
         </configuration>
         <executions>
           <execution>
@@ -214,11 +217,29 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>com.rudikershaw.gitbuildhook</groupId>
+        <artifactId>git-build-hook-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <installHooks>
+            <pre-commit>.hooks/pre-commit</pre-commit>
+          </installHooks>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>install</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <compilerArgs>
             <arg>-Xlint:unchecked</arg>
+            <arg>-proc:full</arg>
           </compilerArgs>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
